--- a/styles.css
+++ b/styles.css
@@ -6914,6 +6914,7 @@ textarea.form-control-lg {
   display: flex !important;
 }
 
+/* This is never used anywhere!!! */
 .d-inline-flex {
   display: inline-flex !important;
 }
@@ -11702,18 +11703,99 @@ body {
 .about-us {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  background-color: gray;
 }
 
-.about-section {
+.mat_name{
+    font-family: 'Akronim'; font-size: 24px;
+}
+
+.about-us-section {
   width: 100%;
   height: 300px;
   display: flex;
   align-items: center;
 }
 
+#mainNav1 {
+  min-height: 2.5rem;
+  background-color: #fff;
+}
+
+#mainNav1 .navbar-toggler {
+  font-size: 80%;
+  padding: 0.75rem;
+  color: #64a19d;
+  border: 1px solid #64a19d;
+}
+#mainNav1 .navbar-toggler:focus {
+  outline: none;
+}
+#mainNav1 .navbar-brand {
+  color: #000;
+  font-weight: 700;
+  padding: 0.9rem 0;
+}
+#mainNav1 .navbar-nav .nav-item:hover {
+  color: fade(#fff, 80%);
+  outline: none;
+  background-color: transparent;
+}
+#mainNav1 .navbar-nav .nav-item:active, #mainNav1 .navbar-nav .nav-item:focus {
+  outline: none;
+  background-color: transparent;
+}
+@media (min-width: 992px) {
+  #mainNav1 {
+    padding-top: 0;
+    padding-bottom: 0;
+    border-bottom: none;
+    background-color: transparent;
+    transition: background-color 0.3s ease-in-out;
+  }
+  #mainNav1 .navbar-brand {
+    padding: 0.5rem 0;
+    color: rgba(255, 255, 255, 0.5);
+  }
+  #mainNav1 .nav-link {
+    transition: none;
+    padding: 2rem 1.5rem;
+    color: rgba(255, 255, 255, 0.5);
+  }
+  #mainNav1 .nav-link:hover {
+    color: rgba(255, 255, 255, 0.75);
+  }
+  #mainNav1 .nav-link:active {
+    color: #fff;
+  }
+  #mainNav1.navbar-shrink {
+    background-color: #fff;
+  }
+  #mainNav1.navbar-shrink .navbar-brand {
+    color: #000;
+  }
+  #mainNav1.navbar-shrink .nav-link {
+    color: #000;
+    padding: 1.5rem 1.5rem 1.25rem;
+    border-bottom: 0.25rem solid transparent;
+  }
+  #mainNav1.navbar-shrink .nav-link:hover {
+    color: #64a19d;
+  }
+  #mainNav1.navbar-shrink .nav-link:active {
+    color: #467370;
+  }
+  #mainNav1.navbar-shrink .nav-link.active {
+    color: #64a19d;
+    outline: none;
+    border-bottom: 0.25rem solid #64a19d;
+  }
+}
+
 .top-menu {
-  background-color: #5995DA;
-  height: 150px;
+  background-color: #ADADAD;
+  height: 90px;
   width: 100%;
 }
 
@@ -11723,10 +11805,11 @@ body {
 
 .about-person1 {
   display: flex;
-  justify-content: flex-start;
+  justify-content: ;
   flex-wrap: wrap;
   flex-direction: row;
   background-color: #B2D6FF;
+  background: linear-gradient(to top, #000 0%, rgba(0, 0, 0, 0.3) 75%, rgba(0, 0, 0, 0.3) 100%);
 }
 
 .about-person2{
@@ -11735,6 +11818,8 @@ body {
   flex-wrap: wrap;
   flex-direction: row-reverse;
   background-color: #C8C6FA;
+  background: linear-gradient(to top, #000 0%, rgba(0, 0, 0, 0.3) 75%, rgba(0, 0, 0, 0.3) 100%);
+  margin: 10px 0 0 0;
 }
 
 .picture {
@@ -11745,7 +11830,7 @@ body {
 .text-part {
   display: flex;
   flex-wrap: wrap;
-  width: 67%
+  width: 100%
   background-color: #00CC00;
   margin: 0 auto;
   border: 2px solid red;
@@ -11753,7 +11838,23 @@ body {
 
 @media only screen and (min-width: 1001px) {
   .about-us {
-    width: 1000px;
+    margin: 0 auto;
+  }
+
+  .about-us-section {
+    width: 90%;
+  }
+
+  .picture {
+    width: 30%;
+    background-color: #00C6Fa;
+  }
+
+  .text-part {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%
+    background-color: #00CC00;
     margin: 0 auto;
   }
 }
