--- a/styles.css
+++ b/styles.css
@@ -11708,21 +11708,10 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-<<<<<<< HEAD
-  background-color: gray;
-=======
->>>>>>> 46cb55e821cf8357cf48d3319936a8f07cc1cbe6
 }
 
 .mat_name{
     font-family: 'Akronim'; font-size: 24px;
-}
-
-.about-us-section {
-  width: 100%;
-  height: 300px;
-  display: flex;
-  align-items: center;
 }
 
 #mainNav1 {
@@ -11800,6 +11789,13 @@ body {
   }
 }
 
+.about-us-section {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  align-items: center;
+}
+
 .top-menu {
   background-color: #ADADAD;
   height: 90px;
@@ -11812,7 +11808,7 @@ body {
 
 .about-person1 {
   display: flex;
-  justify-content: ;
+  justify-content: center;
   flex-wrap: wrap;
   flex-direction: row;
   background-color: #B2D6FF;
@@ -11825,24 +11821,32 @@ body {
   flex-wrap: wrap;
   flex-direction: row-reverse;
   background-color: #C8C6FA;
-<<<<<<< HEAD
   background: linear-gradient(to top, #000 0%, rgba(0, 0, 0, 0.3) 75%, rgba(0, 0, 0, 0.3) 100%);
-=======
->>>>>>> 46cb55e821cf8357cf48d3319936a8f07cc1cbe6
   margin: 10px 0 0 0;
 }
 
-.picture {
-  width: 33%;
+.picture1 {
+  display: flex;
+  width: 35%;
   background-color: #00C6Fa;
+}
+
+.picture2 {
+  display: flex;
+  width: 35%;
+  background-color: #00C6Fa;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-part {
   display: flex;
   flex-wrap: wrap;
-  width: 100%
+  width: 60%
   background-color: #00CC00;
-  margin: 0 auto;
+
 }
 
 @media only screen and (min-width: 1001px) {
@@ -11854,20 +11858,20 @@ body {
     width: 90%;
   }
 
-  .picture {
-    width: 30%;
+  .picture1 {
+    width: 35%;
     background-color: #00C6Fa;
+  }
+
+  .picture2 {
+    width: 35%;
   }
 
   .text-part {
     display: flex;
     flex-wrap: wrap;
-<<<<<<< HEAD
-    width: 100%
-=======
-    width: 60%
->>>>>>> 46cb55e821cf8357cf48d3319936a8f07cc1cbe6
-    background-color: #00CC00;
-    margin: 0 auto;
+    font-size: 1.5rem;
+		max-width: 65%;
+    text-align: left;
   }
 }
