--- a/styles.css
+++ b/styles.css
@@ -11791,8 +11791,9 @@ body {
 
 .about-us-section {
   width: 100%;
-  height: 300px;
+  height: 600px;
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -11822,23 +11823,29 @@ body {
   flex-direction: row-reverse;
   background-color: #C8C6FA;
   background: linear-gradient(to top, #000 0%, rgba(0, 0, 0, 0.3) 75%, rgba(0, 0, 0, 0.3) 100%);
-  margin: 10px 0 0 0;
+  margin: 30px 0 0 0;
 }
 
 .picture1 {
   display: flex;
-  width: 35%;
+  width: 100%;
   background-color: #00C6Fa;
 }
 
 .picture2 {
   display: flex;
-  width: 35%;
+  width: 100%;
   background-color: #00C6Fa;
 }
 
 .text-left {
   text-align: left;
+  margin: 0 10px;
+}
+
+.text-right {
+  text-align: right;
+  margin: 0 auto;
 }
 
 .text-part {
@@ -11846,7 +11853,19 @@ body {
   flex-wrap: wrap;
   width: 60%
   background-color: #00CC00;
+  padding: 10px 10px;
 
+}
+
+.about-page {
+  border-style: solid;
+  border-color: black;
+}
+
+.li1 {
+      display: inline;
+      text-align: center;
+      padding: 25px;
 }
 
 @media only screen and (min-width: 1001px) {
@@ -11855,23 +11874,29 @@ body {
   }
 
   .about-us-section {
+    flex-direction: row;
+    height: 300px;
     width: 90%;
   }
 
+  .about-person2 {
+    flex-direction: row-reverse;
+  }
+
   .picture1 {
-    width: 35%;
-    background-color: #00C6Fa;
+    width: 40%;
   }
 
   .picture2 {
-    width: 35%;
+    width: 40%;
   }
 
   .text-part {
     display: flex;
     flex-wrap: wrap;
-    font-size: 1.5rem;
-		max-width: 65%;
+    font-size: 1.4rem;
+		max-width: 60%;
     text-align: left;
+    padding: 5px 3%;
   }
 }
